<resources>
    <string name="app_name">Cafeteria App</string>

    <!--Login Activity-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>

    <!--Home activity-->
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--Drawer-->
    <string name="myaccount">My account</string>
    <string name="users_accounts">Users accounts</string>
    <string name="logout">Log out</string>

    <!--Error layout-->
    <string name="error">Error</string>
    <string name="error_message">Something went wrong, please try again later!</string>
    <string name="retry">Retry</string>

    <!--Sendotp activity-->
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send">We will send you a One Time Password on this mobile number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_20">+20-</string>
    <string name="num_hint">0123456789</string>
    <string name="get_otp">GET OTP</string>

    <!--Verifyotp activity-->
    <string name="enter_the_otp_sent_to">Enter the OTP sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="verify">Verify</string>

    <!--Newpassword activity-->
    <string name="new_credentials">NEW CREDENTIALS</string>
    <string name="update">UPDATE</string>
    <string name="set_your_new_password">Your identity has been verified \n Set your new password</string>
    <string name="confirm_password">Confirm Password</string>

    <!--Order item layout-->
    <string name="cant_be_null">*****:</string>
    <string name="order_id">Order ID:</string>
    <string name="employee_name">Employee Name:</string>
    <string name="department_name">Department Name:</string>
    <string name="total_number_of_orders">Total orders:</string>
    <string name="total_price">Total Price:</string>

    <!-- Order details  -->
    <string name="order_is_ready">ORDER IS READY</string>
    <string name="item_name">Item Name</string>
    <string name="qty">Qty</string>
    <string name="price">Price</string>
    <string name="dummy_name">dummy name</string>

    <!--Meals item layout-->
    <string name="drinks">Drinks</string>
    <string name="description">Description here</string>

    <!--Radio button sort-->
    <string name="cost_low_to_high">Cost (Low to High)</string>
    <string name="cost_high_to_low">Cost (High to Low)</string>
    <string name="rating">Rating</string>

    <!--Food item layout-->
    <string name="Hamburger">Hamburger</string>
    <string name="rating_stars">4.5</string>
    <string name="food_price">18.89 LE</string>

    <!--Meals fragment layout-->
    <string name="search">Search</string>
    <string name="meal_name">Meal Name</string>

    <!-- Add Food Item layout-->
    <string name="upload_meal_photo">Upload meal photo</string>
    <string name="description2">Description</string>
    <string name="add_category">Add</string>
    <string name="image_url">Image Url</string>


    <!-- ADD/Update/Delete Category -->
    <string name="update_category">Update Category</string>
    <string name="category_name">Category Name</string>
    <string name="delete">Delete</string>


    <!--My account activity-->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_information">Personal Information</string>
    <string name="my_reviews">My Reviews</string>
    <string name="account_settings">Account Settings</string>
    <string name="lionfischer_gmail_com">lionfischer@gmail.com</string>
    <string name="lion_fischer">Lion Fischer</string>


</resources>