<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/error_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/img_sad_blender"/>

        <TextView
            android:id="@+id/tv_error_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/error"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_error_message"
            android:layout_width="300dp"
            android:layout_height="90dp"
            android:text="@string/error_message"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18sp"
            android:maxLines="4"/>


        <Button
            android:id="@+id/btn_error_retry"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/btn_background"
            android:text="@string/retry"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="6dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>