<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sort_groupradio"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_marginTop="40dp">

    <me.omidh.liquidradiobutton.LiquidRadioButton
        android:id="@+id/radio_low_to_high"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:padding="4dp"
        android:text="@string/cost_low_to_high"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:lrb_checkedColor="@color/colorPrimary"
        app:lrb_unCheckedColor="@android:color/black"
        app:lrb_inAnimDuration="500"
        app:lrb_outAnimDuration="550"/>

    <me.omidh.liquidradiobutton.LiquidRadioButton
        android:id="@+id/radio_high_to_low"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/cost_high_to_low"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:lrb_checkedColor="@color/colorPrimary"
        app:lrb_unCheckedColor="@android:color/black"
        app:lrb_inAnimDuration="500"
        app:lrb_outAnimDuration="550"/>

    <me.omidh.liquidradiobutton.LiquidRadioButton
        android:id="@+id/radio_rating"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:padding="4dp"
        android:text="@string/rating"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:lrb_checkedColor="@color/colorPrimary"
        app:lrb_unCheckedColor="@android:color/black"
        app:lrb_inAnimDuration="500"
        app:lrb_outAnimDuration="550"/>

</RadioGroup>