<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:overScrollMode="never"
    android:scrollbars="none">


<LinearLayout
    android:layout_marginTop="50dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        >

        <ImageView
            android:id="@+id/iv_addcat_catimg"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_addmeal_upcatimg"
            android:layout_width="44dp"
            android:layout_height="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="96dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_addcat_catimgurl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_url"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/colorPrimaryVariant"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/et_background"
            android:drawableStart="@drawable/ic_image"
            android:drawableTint="@color/colorPrimaryVariant"
            android:drawablePadding="10dp"
            android:maxLines="1"
            />

        <EditText
            android:id="@+id/et_addcat_catname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            android:inputType="text"
            android:textCursorDrawable="@null"
            android:textColorHint="@color/colorPrimaryVariant"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="20dp"
            android:background="@drawable/et_background"
            android:drawableStart="@drawable/ic_meals"
            android:drawableTint="@color/colorPrimaryVariant"
            android:drawablePadding="10dp"
            android:maxLines="1"
            />


    </LinearLayout>


    <Button
        android:id="@+id/btn_addcat_add"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_background"
        android:text="@string/add_category"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>

</ScrollView>