<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.AddProductActivity">


    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/iv_udproductitem_mealimg"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/app_name"

                android:src="@drawable/ic_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/img_udproductitem_upmealimg"
                android:layout_width="44dp"
                android:layout_height="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="96dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_camera"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_udproductitem_mealimgurl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_url"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/colorPrimaryVariant"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/et_background"
                android:drawableStart="@drawable/ic_image"
                android:drawableTint="@color/colorPrimaryVariant"
                android:drawablePadding="10dp"
                android:maxLines="1"
                />


            <EditText
                android:id="@+id/et_udproductitem_mealname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_name"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/colorPrimaryVariant"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/et_background"
                android:drawableStart="@drawable/ic_meals"
                android:drawableTint="@color/colorPrimaryVariant"
                android:drawablePadding="10dp"
                android:maxLines="1"
                />

            <me.abhinay.input.CurrencyEditText
                android:id="@+id/et_udproductitem_mealprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/colorPrimaryVariant"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/et_background"
                android:drawableStart="@drawable/ic_pound"
                android:drawableTint="@color/colorPrimaryVariant"
                android:drawablePadding="10dp"
                android:maxLines="1"
                />

            <EditText
                android:id="@+id/et_udproductitem_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description2"
                android:inputType="textMultiLine"
                android:textCursorDrawable="@null"
                android:textColorHint="@color/colorPrimaryVariant"
                android:textColor="@color/colorPrimaryVariant"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="20dp"
                android:background="@drawable/et_background"
                android:drawableStart="@drawable/ic_description"
                android:drawableTint="@color/colorPrimaryVariant"
                android:drawablePadding="10dp"
                android:maxLines="5"
                />


            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add to offers?"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_weight="1"/>

                <com.bitvale.switcher.SwitcherX
                    android:id="@+id/switcher_addFood_offers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:switcher_icon_color="@color/white"
                    tools:ignore="MissingClass" />

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">
            <Button
                android:id="@+id/btn_udproduct_update"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/update"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_udproduct_delete"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/btn_background"
                android:text="@string/delete"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                android:textStyle="bold"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>