<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OrderDetailsActivity"
    android:background="@drawable/ctr_bg">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_orderdetails"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/ct_orderdetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="#7F3220"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:title="Order #"
            android:background="@drawable/ctr_bg"
            android:alpha="0.9"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/im_food_demo"
                app:layout_collapseMode="parallax"
                android:alpha="0.9"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_orderdetails"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:stretchColumns="1,2,3"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="40dp">
                <TableRow>

                    <TextView
                        android:layout_column="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/item_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_column="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/qty"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_column="1"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/price"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </TableRow>

            </TableLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rv_orderdetails"
                tools:listitem="@layout/order_details_item"
                tools:itemCount="6"/>

            <TextView
                android:id="@+id/tv_orderdetails_totalprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/total_price"
                android:gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/roboto_medium"
                android:textStyle="bold" />

        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/btn_orderdetails_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back" />



    <Button
        android:id="@+id/btn_orderdetails_orderready"
        android:text="@string/order_is_ready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_check"
        app:fabSize="normal"
        android:focusable="true"
        app:layout_anchor="@id/appbar_orderdetails"
        app:layout_anchorGravity="end|bottom"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/colorSuccess"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>